// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexPageGuest renders IndexPageGuest component 1`] = `
<DocumentFragment>
  <div
    class="Sidebar IndexGuest Sidebar--Show"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        TestSite
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          summary.title
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            $262.00
          </p>
        </div>
      </button>
    </div>
    <div
      class="IndexGuest__Customer"
    >
      <h2
        class="IndexGuest__Title"
      >
        customer.info
      </h2>
      <div
        class="IndexGuest__Login"
      >
        customer.already_have_account
        <a
          href="/"
        >
          customer.login
        </a>
      </div>
      <div
        class="stx-field stx-field--with-input"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField1"
            name="email_address"
            placeholder="customer.email"
            type="email"
          />
        </div>
      </div>
      <div
        class="stx-field stx-checkbox-field__field"
      >
        <div
          class="stx-checkbox-field__div"
        >
          <span
            class="stx-checkbox stx-checkbox-field__checkbox"
          >
            <input
              class="stx-checkbox__input"
              id="stxField2"
              type="checkbox"
            />
            <span
              class="stx-checkbox__mount"
            />
          </span>
          <label
            class="stx-checkbox-field__label"
            for="stxField2"
          >
            customer.subscribe
          </label>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingAddress"
    >
      <h2
        class="IndexGuest__Title"
      >
        shipping.address
      </h2>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField3"
                name="first_name"
                placeholder="address.first_name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField4"
                name="last_name"
                placeholder="address.last_name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField5"
                name="business_name"
                placeholder="address.business_name_optional"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField6"
                name="address_line_1"
                placeholder="address.address_line_1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField7"
                name="address_line_2"
                placeholder="address.address_line_2"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField8"
                name="city"
                placeholder="address.city"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup FieldGroup__Country"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                class="stx-select__select-element"
                id="stxField9"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  address.country_hint
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField10"
                name="phone_number"
                placeholder="address.phone_number_optional"
                type="tel"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingMethod"
    >
      <section
        class="FieldSet FieldSet--ShippingMethod"
      >
        <div
          class="FieldSet__Header"
        >
          <h3
            class="FieldSet__Heading"
          >
            shipping.method
          </h3>
        </div>
        <div
          class="FieldSet__Content"
        />
      </section>
    </div>
    <div
      class="IndexGuest__Footer"
    >
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--primary stx-button--is-disabled IndexGuest__Billing-btn"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          continue_to_billing
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
      <div
        class="IndexGuest__Footer--login"
      >
        <a
          href="/"
        >
          back_to_login
        </a>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        all_rights_reserved TestSite
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IndexPageGuest renders IndexPageGuest component 2`] = `
<DocumentFragment>
  <div
    class="Sidebar IndexGuest IndexPage--Hide"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        TestSite
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          summary.title
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            $262.00
          </p>
        </div>
      </button>
    </div>
    <div
      class="IndexGuest__Customer"
    >
      <h2
        class="IndexGuest__Title"
      >
        customer.info
      </h2>
      <div
        class="IndexGuest__Login"
      >
        customer.already_have_account
        <a
          href="/"
        >
          customer.login
        </a>
      </div>
      <div
        class="stx-field stx-field--with-input"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField11"
            name="email_address"
            placeholder="customer.email"
            type="email"
          />
        </div>
      </div>
      <div
        class="stx-field stx-checkbox-field__field"
      >
        <div
          class="stx-checkbox-field__div"
        >
          <span
            class="stx-checkbox stx-checkbox-field__checkbox"
          >
            <input
              class="stx-checkbox__input"
              id="stxField12"
              type="checkbox"
            />
            <span
              class="stx-checkbox__mount"
            />
          </span>
          <label
            class="stx-checkbox-field__label"
            for="stxField12"
          >
            customer.subscribe
          </label>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingAddress"
    >
      <h2
        class="IndexGuest__Title"
      >
        shipping.address
      </h2>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField13"
                name="first_name"
                placeholder="address.first_name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField14"
                name="last_name"
                placeholder="address.last_name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField15"
                name="business_name"
                placeholder="address.business_name_optional"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField16"
                name="address_line_1"
                placeholder="address.address_line_1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField17"
                name="address_line_2"
                placeholder="address.address_line_2"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField18"
                name="city"
                placeholder="address.city"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup FieldGroup__Country"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                class="stx-select__select-element"
                id="stxField19"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  address.country_hint
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField20"
                name="phone_number"
                placeholder="address.phone_number_optional"
                type="tel"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingMethod"
    >
      <section
        class="FieldSet FieldSet--ShippingMethod"
      >
        <div
          class="FieldSet__Header"
        >
          <h3
            class="FieldSet__Heading"
          >
            shipping.method
          </h3>
        </div>
        <div
          class="FieldSet__Content"
        >
          <p>
            shipping.options_description
          </p>
        </div>
      </section>
    </div>
    <div
      class="IndexGuest__Footer"
    >
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--primary stx-button--is-disabled IndexGuest__Billing-btn"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          continue_to_billing
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
      <div
        class="IndexGuest__Footer--login"
      >
        <a
          href="/"
        >
          back_to_login
        </a>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        all_rights_reserved TestSite
      </div>
    </div>
  </div>
</DocumentFragment>
`;
